fix category-box-wrap 의 width 수치를 max-content로 변경

--- a/newsstand/styles/newsstand.css
+++ b/newsstand/styles/newsstand.css
@@ -13,7 +13,7 @@
     position: relative;
     overflow: hidden;
     display: flex;
-    width: 100%;
+    width: max-content;
     height: 100%;
     align-items: center;
     justify-content: center;
@@ -103,6 +103,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    overflow-x: scroll;
     height: 100%;
     width: auto;
     background-color: #d2dae0;
